    - allows scripts to avoid the interactive editors
    - document these changes in the manpage

  [ Didier Roche ]
  * lp-project-upload:
    - fix a bug when new milestone wasn't specified

  [ Evan Broder ]
  * ubuntutools.misc: Add a new "system_distribution_chain", which returns
    a list starting with the current distribution and working its way up
    each distribution's parent.

 -- Evan Broder <evan@ebroder.net>  Sat, 11 Jun 2011 05:05:21 -0700

ubuntu-dev-tools (0.124) unstable; urgency=low

  [ Benjamin Drung ]
  * Move add-patch, edit-patch, suspicious-source, what-patch, and wrap-and-sort
    from ubuntu-dev-tools into devscripts (Closes: #568481).

  [ Daniel Holbach ]
  * bitesize:
    - display error message properly (LP: #785973).
    - error out if bug is already marked as 'bitesize'.
    - rephrase bug comment and subscribe person who adds the comment.
    - work-around LP:336866 and LP:254901.

  [ Stefano Rivera ]
  * mk-sbuild:
    - maintainer_name isn't mandatory any more (LP: #787051)

 -- Benjamin Drung <bdrung@debian.org>  Wed, 25 May 2011 18:27:46 +0200

ubuntu-dev-tools (0.123) unstable; urgency=low

  [ Stefano Rivera ]
  * mk-sbuild:
    - Disable daemons with a policy-rc.d script (like pbuilder does)
    - Move package installation after option parsing.
    - Exit 0 when showing help, and support -h.
    - Determine distribution from release name (via distro-info).
    - Reformat manpage.
    - Install qemu-user-static instead of qemu-kvm-extras-static.
    - Put schroot configuration in chroot.d/sbuild-$chroot (LP: #736808)
    - Understand Debian distribution synonyms, and store the chroot under the
      code name.
    - Support Debian experimental.

  [ Daniel Holbach ]
  * bitesize, doc/bitesize.1: add script to tag a bug as bitesize and add a
    comment that you are willing to help with fixing the bug.

  [ Benjamin Drung ]
  * sponsor-patch: Fix assertion error if a relative working directory